QA Passed Build Commit

--- a/app/src/main/res/layout/fragment_update_profile.xml
+++ b/app/src/main/res/layout/fragment_update_profile.xml
@@ -336,9 +336,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/height"
-                    android:inputType="number"
-                    android:digits="0123456789."
-                    android:maxLength="4"
+                    android:inputType="numberDecimal"
+                    android:maxLength="5"
                     android:imeOptions="actionNext"
                     android:textColor="@color/color_accent"
                     android:background="@color/transparent"
@@ -406,9 +405,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/weight"
-                    android:inputType="number"
-                    android:maxLength="4"
-                    android:digits="0123456789."
+                    android:inputType="numberDecimal"
+                    android:maxLength="5"
                     android:imeOptions="actionNext"
                     android:textColor="@color/color_accent"
                     android:background="@color/transparent"
@@ -477,7 +475,7 @@
                     android:imeOptions="actionDone"
                     android:hint="@string/about"
                     android:scrollbars="vertical"
-
+                    android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"
                     android:textColor="@color/black0"
                     android:textSize="@dimen/x12"
                     app:typeface="@string/font_normal" />
